--- a/app/profile(forcustomer).html
+++ b/app/profile(forcustomer).html
@@ -1187,7 +1187,7 @@
 							</a>
 						</div>
 						<div class="forcustomer-right">
-							<a href="https://vimeo.com/45830194" class="video">
+							<a href="https://vimeo.com/45830194" class="video" js-popup-video>
 								<object>
 									<a href="#" class="customer-edit">Редактировать</a>
 									<img src="img/image2.2.jpg" alt="image" class="video-img">
